# ChangeLog for dev-python/psycopg
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/psycopg/ChangeLog,v 1.194 2015/02/01 23:43:34 mrueg Exp $

  01 Feb 2015; Manuel Rüger <mrueg@gentoo.org> metadata.xml:
  Drop unused USE description.

  01 Feb 2015; Manuel Rüger <mrueg@gentoo.org> -psycopg-2.4.5.ebuild,
  -psycopg-2.4.6.ebuild:
  Remove old.

  28 Dec 2014; Aaron W. Swenson <titanofold@gentoo.org> psycopg-1.1.21.ebuild,
  psycopg-1.1.21-r1.ebuild, psycopg-2.4.5.ebuild, psycopg-2.4.6.ebuild,
  psycopg-2.5.1.ebuild, psycopg-2.5.2.ebuild, psycopg-2.5.3.ebuild,
  psycopg-2.5.4.ebuild:
  Rename virtual/postgresql to dev-db/postgresql

  07 Dec 2014; Justin Lecher <jlec@gentoo.org> psycopg-2.4.5.ebuild,
  psycopg-2.4.6.ebuild, psycopg-2.5.1.ebuild, psycopg-2.5.2.ebuild,
  psycopg-2.5.3.ebuild, psycopg-2.5.4.ebuild, metadata.xml:
  Fix LICENSE information, thanks ulm for help

  04 Dec 2014; Agostino Sarubbo <ago@gentoo.org> psycopg-2.5.3.ebuild:
  Stable for ppc64, wrt bug #525508

  03 Dec 2014; Agostino Sarubbo <ago@gentoo.org> psycopg-2.5.3.ebuild:
  Stable for ppc, wrt bug #525508

  02 Dec 2014; Agostino Sarubbo <ago@gentoo.org> psycopg-2.5.3.ebuild:
  Stable for alpha, wrt bug #525508

  01 Dec 2014; Agostino Sarubbo <ago@gentoo.org> psycopg-2.5.3.ebuild:
  Stable for sparc, wrt bug #525508

  11 Nov 2014; Agostino Sarubbo <ago@gentoo.org> psycopg-2.5.3.ebuild:
  Stable for ia64, wrt bug #525508

  03 Nov 2014; Aaron W. Swenson <titanofold@gentoo.org> psycopg-1.1.21.ebuild,
  psycopg-1.1.21-r1.ebuild, psycopg-2.4.5.ebuild, psycopg-2.4.6.ebuild,
  psycopg-2.5.1.ebuild, psycopg-2.5.2.ebuild, psycopg-2.5.3.ebuild,
  psycopg-2.5.4.ebuild:
  Update PostgreSQL dependencies and/or checks to virtual/postgresql.

  03 Nov 2014; Agostino Sarubbo <ago@gentoo.org> psycopg-2.5.3.ebuild:
  Stable for x86, wrt bug #525508

  03 Nov 2014; Agostino Sarubbo <ago@gentoo.org> psycopg-2.5.3.ebuild: