@@ -6,11 +6,13 @@ DIST psycopg2-2.5.1.tar.gz 684504 SHA256 65a70c88a7e02d8bef57aab8636b5795389674c
 DIST psycopg2-2.5.2.tar.gz 685762 SHA256 50382d8703a16c3c615f328c2676f002787095925c99f0afb125a59962a5bd2e SHA512 8bba8f2f70918c787bd4968212a6f72e77b21be37f264e7a59f581f494444b3acb123f3fad05558fbf9ec8c876a031393d79dc850257a6d9f6b0a425ff01cf62 WHIRLPOOL 5d8e9399baeefa3e4eeafef489355d6b5ea714cce158925dbed5977603529aa47943c10662455f4d8de552a00c2ff1d95e641b0029a574b9e9e154864b3bdeb5
 DIST psycopg2-2.5.3.tar.gz 690689 SHA256 3a2df3bb113187227aa97d0dd3d06e0f26be3d50dcdeeaef67fac59ed51a030a SHA512 88590c37be839e8cf5025b7ac40411c4682269700795c5f8f1b762966d906faf3f1ee85de35fc734a2d10c6a68d7fef569891bd96919bab809b9500625e2a41a WHIRLPOOL dccd694dfb2192992731e982b085ba4feb3b2b89d56c9e69ec88e0efbd14ec7367841849958aa1e9f190179b300ce511532d6b23e51b4f96babc302f37efcf4f
 DIST psycopg2-2.5.4.tar.gz 682578 SHA256 24ba3f328aba08d8d505bc2a8f68a94ebe24a85e8483640b667221bc0efd3b1e SHA512 24e7f7940cb55ad686d93c5baa3286be56a5c21376868403248fff919e54cfa57c039623c1b8c10947fa206aabb9eb865e051520a5a0445be133962eed016854 WHIRLPOOL bce35d47eb2025cf01ea9b7597318d56fcdf84b0cd29e251068f3f20c1f2c5b6ee5050fef6360c690c27d84f334b73a29553389f5e8a28b416151eb32c4b37f9
+DIST psycopg2-2.6.tar.gz 367972 SHA256 c00afecb302a99a4f83dec9b055c4d1cc196926d62c8db015d68432df8118ca8 SHA512 50618bef6372d9cf165bc9ee2f1c3d77727f359fdded825cdf9b6dfd513a9455fd5d935dfda203b2affa43c45cf86bb25b742db6f6b8228cc2fb293aa42bc4f1 WHIRLPOOL fee5180674ec60a6ade287a6f30efddaa8e4a830e8719a892c1aff22aa66ce4c5dd8fa5acf75f6cc17d8f65c104c79da129b664619f137f21618230d08308933
 EBUILD psycopg-1.1.21-r1.ebuild 1694 SHA256 7cf14665131fccdce66dcf2f9ec45b608e655f10b13361f0df2d2f625c2960cf SHA512 308aca8e4fb41471caa16a6ef483851c24f48153d6f3f7553e65601521677453d287170fa68d1b47168f1f60767abd5c43a2887b9b81006655fa4910585d7526 WHIRLPOOL fd9faf27570edd412378fe18e3c0a0d4f2bc74931fdbcc9f1811a0416d0d86d3068ed245783979f9da6347f6a31928acc9dfda6e0857ffbfade8ae8ae47c31e0
 EBUILD psycopg-1.1.21.ebuild 1418 SHA256 add79a2262d9258b5e268939a5b2210c2e9ef5a1c41fb8be94a13e5dce088ce2 SHA512 e2ffd4f676e30d2437829809143067cbebca93df0e596e9fe8c81415a1e0b161e903b8592b78c2d857ee91f7422cfaf14eeb951c3315ea3331c93cdc3c074ea3 WHIRLPOOL 26db7a50fc8571ce429204010a949eaba6d21df124cdfe5765d4fa211afd9cf71112d72652c6a968eb1e3183c988fd4f0b9a48deb46a3320d5d48d2ee97e538b
 EBUILD psycopg-2.5.1.ebuild 1659 SHA256 cbc853c4baee95408c59dfe521cbda72906117e469ef627b5011581e75b9c7e9 SHA512 a84551ea559c09f205083df871d2e69861854df8c3c5401407b6d10c4c0cf0b2cb784cca9e49e5f92e8471d427adedd2f016eda94dca0a58206504720fb952a0 WHIRLPOOL fe1ca648215c34a0750632aed9c0e501af3ce687d45a1743e0da16bf99b74fa9ee7525831511100d8978303cec72ed53fcbffc37eb937be9f8f9dcd81ea6d194
 EBUILD psycopg-2.5.2.ebuild 1671 SHA256 3cfc5ed88725a0258471530aab92bc20c716c63921aa93417f4ff2e40326ad5d SHA512 7d28dd49d64b7cb52baa729fc572199a405f5f852e37c06ce16e4f5acc66a13e7ae22a4b9195834025a22ca36a38e8fee762476f48ad7182db421bf941cc3544 WHIRLPOOL 4e9bcf696f6439934260804ee81b8d8cea7e2f6db993ed7661f28d14be7671224eb969bd1c3617ee379e7de7ccec202193752c8c67b1054bdce4bddc70f0ed00
 EBUILD psycopg-2.5.3.ebuild 1574 SHA256 60ddd0726e5da4dff08b1a9261313715932135cb8c9ede90e0ba2fdc888d58c0 SHA512 12b1edf2e8be93592e97d03fac1dfea4358d7119658795499209e22650792da601e0feecd1f70916bf0e1a5b2ee7dd79a3c6444e76ea4635801a606c626dd15f WHIRLPOOL 3983fa8189bb2a135a16aaf8e85942d5de3a185c4ea0241b00966ecf8f63ec1643ef6c7dbb109290c0e80eaf520fe45d63ef22466619f5a1c7526fad4cfec98b
 EBUILD psycopg-2.5.4.ebuild 2081 SHA256 a907df0f0a89b4a538f1e4ca1b5dd95f45eefe3633c6bad7c9d58ba6fc61e563 SHA512 b2b529b28a3280508746d4dda0d52b832ad22ef6b38abc4f69088389375a5d46201879caebf2dd2a708abcfe91b81084709b74604b58a7a8d08538d864ee2857 WHIRLPOOL 431d846862af621624bca1b5c2db62e2828589dcae428ca2221ca7ade7fb7bb4f3adee0a5da7934fa90dc593d1e6b3c74aefca44eb843764575e7f09c6122bff
-MISC ChangeLog 25450 SHA256 c5fd096013ef0fbe567ce8686036db4a70fe614d8b1abe84af85dcc35b80dd0a SHA512 c5db7cc81b13362b51fde32973004ecee9ca6a405383ebe14e1543c34ac09314b7ae1303a27cf3db5b34d0747c8dda9c63fe5ddd4f321da78c5dd18fb64ea0aa WHIRLPOOL c6bcb5c957eeb9c852d7677e3d5925c21201544a0a16d8c201218d3fe0a8148e1f1808d904813a3592ea9084938554214db4d5dd17b4ea88902cac407d1e1226
+EBUILD psycopg-2.6.ebuild 2076 SHA256 15b91eb3af6a0a0e967a5ec862cf24175934d63f68b3920c5beb6e847b21b188 SHA512 87178891f99be84b5aec324f21cd9888f7822c35aa24abb0670840a98c585b17723b0705db8dbc60961b259ab78215986e0bc12137293ffe35d7a2b6908792fc WHIRLPOOL f45855fa075f10131464a4081b1c678b9c49cbf208bea14dfa869c2d3839ce4a0f823066168e6caeb2d3b03767c1fa2986d285a4a2ced75cb7ffd1275f5af4a2
+MISC ChangeLog 25559 SHA256 ae1f7f25bf90d647f9d3591ff7755a6d533b890954fd9a1f41e6f717b580ff79 SHA512 3320057f5e53dfae1326d1f599da28e91b162eefcb2a3df26c31f283de60bfb73f7921e401b275c292bb00cb4ef54cbb5857fb280baebf9c8f30c252d8d3ff5e WHIRLPOOL 5d12e02d19db3f7ccfde0fd78db6b0dfed64ca915dd16713b31683b1bb4ccc8b7108a9ba774a444332ec40e06886ef3c1d786ae6a760218dd02e868f2ab57536
 MISC metadata.xml 236 SHA256 31e152a485c338f937a102a8fefb2251a897a6d4a4c232b6108dd0930494fd3d SHA512 6d1c6a927d16ff922f5fce8ec24c9fde125287212ee05b95fac135ad5dee8993195974a9d2d3800df25312c9578a9a1a2bfa8a44076c951b7fdf5180914c2e6b WHIRLPOOL 24463abeb2ef6bda8f9e8074080c2ec10eb91f055c193e6858a28ba527f7e6685fa352522df90e769bc7fece3059dcbf7d0d2c801127d2bdc36bcd4cc1cf417a
