@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/psycopg
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/psycopg/ChangeLog,v 1.194 2015/02/01 23:43:34 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/psycopg/ChangeLog,v 1.195 2015/02/12 06:08:34 patrick Exp $
+
+*psycopg-2.6 (12 Feb 2015)
+
+  12 Feb 2015; Patrick Lauer <patrick@gentoo.org> +psycopg-2.6.ebuild:
+  Bump
 
   01 Feb 2015; Manuel Rüger <mrueg@gentoo.org> metadata.xml:
   Drop unused USE description.
